worked on added start quiz sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Coding Quiz</title>
   </head>
   <body>
+    <header class="main-header">
+      <button id="view-scores">View high scores</button>
+
+      <p class="time-clock">Time: <span id="timer"></span></p>
+    </header>
+
+    <main class="main-content">
+      <section class="start-quiz">
+        <h1>Coding Quiz Challenge</h1>
+
+        <p>
+          Try answering all the code-related questions within the time limit.
+          Keep in mind that incorrect answers will penalize your score/time by
+          10 second.
+        </p>
+
+        <button class="start-button">Start Quiz</button>
+      </section>
+    </main>
     <script src="./js/script.js"></script>
   </body>
 </html>
