worked on start quiz page

--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
     </header>
 
     <main class="main-content">
-      <section class="start-quiz">
+      <section id="start-page" class="start-section">
         <h1>Coding Quiz Challenge</h1>
 
         <p>
           Try answering all the code-related questions within the time limit.
           Keep in mind that incorrect answers will penalize your score/time by
-          10 second.
+          ten second.
         </p>
 
-        <button class="start-button">Start Quiz</button>
+        <button id="start-quiz" class="start-button">Start Quiz</button>
+      </section>
+
+      <section id="question-page">
+        <button id="question-button" class="hidden">Hit Me</button>
       </section>
     </main>
     <script src="./js/script.js"></script>
