--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <main class="main-content">
-      <section id="start-page" class="start-section">
+      <section id="start-page" class="start-section hidden">
         <h1>Coding Quiz Challenge</h1>
 
         <p>
@@ -26,8 +26,24 @@
         <button id="start-quiz" class="start-button">Start Quiz</button>
       </section>
 
-      <section id="question-page">
-        <button id="question-button" class="hidden">Hit Me</button>
+      <section id="question-page" class="question-section">
+        <h2>
+          Which of the following methods can be used to display data in some
+          form using Javascript?
+        </h2>
+
+        <div class="answer-btn-container">
+          <button id="answer-btn-1" class="answer-btn">
+            1. document.Write()
+          </button>
+          <button id="answer-btn-2" class="answer-btn">2. console.log()</button>
+          <button id="answer-btn-3" class="answer-btn">
+            3. window.alert()
+          </button>
+          <button id="answer-btn-4" class="answer-btn">
+            4. all of the above
+          </button>
+        </div>
       </section>
     </main>
     <script src="./js/script.js"></script>
