worked on creating the answer buttons in js instead of hard coded in the HTML

--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
       <section id="question-page" class="question-section hidden">
         <h2 id="question">Questions</h2>
         <div class="answer-btn-parent">
-          <div id="answer-container" class="answer-btn-container">
-            <!-- <button id="answer-btn-1" class="answer-btn">1. Answer</button>
-            <button id="answer-btn-2" class="answer-btn">2. Answer</button>
-            <button id="answer-btn-3" class="answer-btn">3. Answer</button>
-            <button id="answer-btn-4" class="answer-btn">4. Answer</button> -->
-          </div>
+          <div id="answer-buttons" class="answer-btn-container"></div>
         </div>
         <div id="result-popup" class="result hidden">
           <hr />
