--- a/highscores.html
+++ b/highscores.html
@@ -9,10 +9,10 @@
   <body>
     <section class="high-scores-page">
       <h1>High Scores</h1>
-      <div id="high-score-list"></div>
+      <div id="high-score-list" class="score-list"></div>
       <div class="high-score-buttons">
-        <button class="scores-button" onclick="history.back()">Go back</button>
-        <button class="scores-button">Clear high scores</button>
+        <button onclick="history.back()">Go back</button>
+        <button id="clear-scores">Clear high scores</button>
       </div>
     </section>
     <script src="./js/highscores.js"></script>
