--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p id="final-score-text"></p>
         <div class="enter-initials">
           <p>
-            Enter initials: <input type="text" id="initials" max="3" />
+            Enter initials: <input type="text" id="initials" maxlength="3" />
             <button id="submit-score">Submit</button>
           </p>
         </div>
