--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="main-header">
       <a id="view-scores" href="highscores.html">View high scores</a>
 
-      <p class="time-clock">Time: <span id="timer"></span></p>
+      <p class="time-clock">Time: <span id="timer">60</span></p>
     </header>
 
     <main class="main-content">
@@ -26,7 +26,6 @@
         <button id="start-quiz" class="start-button">Start Quiz</button>
       </section>
 
-      <!-- ASK ABOUT THE CLASSES -->
       <section id="question-page" class="question-section display-flex hidden">
         <h2 id="question">Questions</h2>
         <div class="answer-btn-parent">
